--- a/.env
+++ b/.env
@@ -26,5 +26,5 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://userRestaurant:php@127.0.0.1:3306/restaurantsym?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://userRestaurant:php@127.0.0.1:3306/restaurantsym2?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
